syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package post;

message PostModel {
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.StringValue author_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  google.protobuf.BoolValue is_promoted = 6;

  repeated google.protobuf.StringValue upvotes = 7;
  repeated google.protobuf.StringValue downvotes = 8;
  repeated google.protobuf.StringValue comments = 9;
  repeated google.protobuf.StringValue tags = 10;

  repeated google.protobuf.StringValue tron_transaction = 11;
  repeated google.protobuf.StringValue ethereum_transaction = 12;
  repeated google.protobuf.StringValue donations = 13;
  repeated google.protobuf.StringValue pictures = 14;

  google.protobuf.StringValue id = 15;
}

message PostForm {
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.StringValue author_id = 3;
  repeated google.protobuf.StringValue pictures = 4;
  google.protobuf.BoolValue is_promoted = 5;
  repeated google.protobuf.StringValue tags = 6;
  google.protobuf.StringValue _id = 7;
}

message CommentForm {
  google.protobuf.StringValue author_id = 1;
  google.protobuf.StringValue post_id = 2;
  google.protobuf.StringValue content = 3;
  google.protobuf.StringValue _id = 4;
}

message CommentModel {
  google.protobuf.StringValue _id = 1;
  google.protobuf.StringValue author_id = 2;
  google.protobuf.StringValue post_id = 3;

  repeated google.protobuf.StringValue upvotes = 4;
  repeated google.protobuf.StringValue downvotes = 5;
  repeated google.protobuf.StringValue subcomments = 6;

  google.protobuf.StringValue content = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  google.protobuf.BoolValue was_edited = 10;

}

message GetByObjectId {
  google.protobuf.StringValue _id = 1;
}

message GetCommentsRequest {
  google.protobuf.Int32Value limit = 1;
  google.protobuf.Int32Value page = 2;
  google.protobuf.StringValue id = 3;
}

message GetUserPostsRequest {
  google.protobuf.StringValue user_id = 1;
  google.protobuf.Int32Value limit = 2;
  google.protobuf.Int32Value page = 3;
  google.protobuf.StringValue filter = 4;
  google.protobuf.StringValue match = 5;
}

message UpdateByObjectId {
  google.protobuf.StringValue _id = 1;
}
message VotePostRequest {
  google.protobuf.StringValue _id = 1;
  google.protobuf.StringValue current_user_id = 2;
}

message VoteCommentRequest {
  google.protobuf.StringValue _id = 1;
  google.protobuf.StringValue current_user_id = 2;
}

message DeleteByObjectId {
  google.protobuf.StringValue _id = 1;
}

message GetPostsRequest {
  repeated google.protobuf.StringValue _ids = 1;
  google.protobuf.Int32Value limit = 2;
  google.protobuf.Int32Value page = 3;
  google.protobuf.StringValue filter = 4;
  google.protobuf.StringValue match = 5;
}

service PostService {
  // CREATE & UPDATE & DELETE
  rpc CreatePost(PostForm) returns (PostModel);
  rpc UpdatePost(PostForm) returns (PostModel);
  rpc DeletePost(DeleteByObjectId) returns (google.protobuf.Empty);
  //  COMMENT
  rpc CreateComment(CommentForm) returns (CommentModel);
  rpc UpdateComment(CommentForm) returns (CommentModel);
  rpc DeleteComment(DeleteByObjectId) returns (google.protobuf.Empty);
  // GET & FIND
  rpc GetPostById(GetByObjectId) returns (PostModel);
  rpc GetPost(GetPostsRequest) returns (stream PostModel);
  // COMMENT
  rpc GetPostComments(GetCommentsRequest) returns (stream CommentModel);
  // USER
  rpc GetUserPosts(GetUserPostsRequest) returns (stream PostModel);
  // UPVOTE POST AND COMMENT
  rpc UpvotePost(VotePostRequest) returns (google.protobuf.Empty);
  rpc DownvotePost(VotePostRequest) returns (google.protobuf.Empty);
  //  COMMENT
  rpc UpvoteComment(VoteCommentRequest) returns (google.protobuf.Empty);
  rpc DownvoteComment(VoteCommentRequest) returns (google.protobuf.Empty);
}
