syntax = "proto3";

import "google/protobuf/wrappers.proto";

package user;

message UserModel {
  google.protobuf.StringValue _id = 1;
  google.protobuf.StringValue username = 2;
  google.protobuf.StringValue email = 3;
  google.protobuf.StringValue password = 4;
  google.protobuf.StringValue picture = 5;
  google.protobuf.StringValue token = 6;
  UserWallet userWallet= 7;
}

message LoginForm {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
}

message RegisterForm {
  google.protobuf.StringValue username = 1;
  google.protobuf.StringValue email = 2;
  google.protobuf.StringValue password = 3;
}

message UserWallet {
  google.protobuf.StringValue token = 1;
  google.protobuf.StringValue amount = 2;
  google.protobuf.StringValue toUsd = 3;
}

message GetUserByIdForm {
  google.protobuf.StringValue _id = 1;
}

message GetUsersForm {
  google.protobuf.Int32Value count = 1;
  google.protobuf.Int32Value page = 2;
  google.protobuf.StringValue filter = 3;
  google.protobuf.StringValue match = 4;
  GetUserByIdForm _idList = 5;
}

message UserList {
  google.protobuf.BoolValue status = 1;
  repeated UserModel userList = 2;
}


service UserService {
  rpc Login(LoginForm) returns (UserModel);
  rpc Register(RegisterForm) returns (UserModel);
  rpc GetById(GetUserByIdForm) returns (UserModel);
  rpc GetAllUsers(GetUsersForm) returns (UserList);
}